# beagleLED

./: .gitignore  CMakeLists.txt  README.MD  cmake_configuration.h.in  cmake_configuration.hpp.in  cmake_print_colors.hpp.in  color.cmake
beagleboneLib/: CMakeLists.txt
beagleboneLib/inc/: Beaglebone.hpp  Led.hpp
beagleboneLib/src/: Beaglebone.cpp  Led.cpp
inc/: cmake_configuration.h  heartbeat.hpp  log_formatter.hpp
src/: heartbeat.cpp  log_formatter.cpp  main.cpp
test/: main.cpp
